force-app/main/default/objects/Vehicle_Diagnostic__c/Vehicle_Diagnostic__c.object-meta.xml
<CustomObject>
    <description>OBD/DTC diagnostic record from GPS Insight vehicle diagnostics endpoint. Synced by WEXMaintenanceSyncService.</description>
    <label>Vehicle Diagnostic</label>
    <nameField>
        <displayFormat>VDIAG-{00000}</displayFormat>
        <label>Vehicle Diagnostic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Diagnostics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>