force-app/main/default/objects/Vehicle_Diagnostic__c/fields/DTC_Code__c.field-meta.xml
<CustomField>
    <fullName>DTC_Code__c</fullName>
    <description>OBD-II diagnostic trouble code (e.g., P0300). Blank for non-OBD diagnostics.</description>
    <label>DTC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>