force-app/main/default/objects/Vehicle_Diagnostic__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True when the diagnostic code has not been cleared.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>