force-app/main/default/objects/Vehicle_Diagnostic__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Diagnostic severity as reported by GPS Insight: low, medium, high, critical.</description>
    <label>Severity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>