force-app/main/default/objects/Vehicle_Diagnostic__c/fields/WEX_Diagnostic_Id__c.field-meta.xml
<CustomField>
    <fullName>WEX_Diagnostic_Id__c</fullName>
    <description>Unique diagnostic record identifier from GPS Insight. Used as external ID for upsert.</description>
    <externalId>true</externalId>
    <label>WEX Diagnostic Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>